change line height & line spacing to fix spacing between lines, text and paragraphs (line-height and margin-bottom)

--- a/Project 2/style.css
+++ b/Project 2/style.css
@@ -65,6 +65,7 @@ main {
     /* background-color: purple; */
     /* width: 66.3%; this can work without flexbox */
     flex: 2;
+    padding-right: 100px;
 }
 
 .herobox2 {
@@ -76,4 +77,10 @@ main {
 h1 {
     font-family: 'Playfair Display', serif;
     font-size: 3.25rem;
+    margin-bottom: 1rem;
+}
+
+p {
+    line-height: 1.75rem;
+    margin-bottom: 0.5rem;
 }
